--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,13 @@
-.App {
-  text-align: center;
+/* Login Page */
+.login_button {
+  font-family: "Segoe UI";
+  background-color: #f14b4b;
+  color: #ffffff;
+  font-size: 1.2em;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.guest_button {
+  font-family: "Segoe UI";
+  background-color: #1e1e1e;
+  color: #ffffff;
+  font-size: 1.2em;
 }
