--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,30 @@
+/* @font-face{
+  font-family: '';
+  src: local(''), url(./fonts/Rajdhani/Rajdhani-Regular.ttf) format('truetype');
+} */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f5f9;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#container {
+}
+
+.button_primary {
+  width: 400px;
+  height: 63px;
+  outline: none;
+  border: none;
+  border-radius: 10px;
 }
