--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,17 +2,20 @@
   font-family: '';
   src: local(''), url(./fonts/Rajdhani/Rajdhani-Regular.ttf) format('truetype');
 } */
+* {
+	margin: 0px;
+}
 
 body {
-  margin: 0;
-  font-family: "Segoe UI";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #f2f5f9;
-  height: 100vh;
+	margin: 0;
+	font-family: "Segoe UI";
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #f2f5f9;
+	height: 100vh;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
