--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -1,29 +1,29 @@
 :root {
-  --red1: "#FF3333";
-  --red2: "#E64551";
-  --red3: "#F24F4F";
-  --red4: "#F14B4B";
-  --red41: "#FF6F61";
-  --red5: "#FF9B91";
-  --red6: "#FFF8F7";
-  --black: "#2C2E32";
-  --white: "#ffffff";
-  --grey1: "#676F79";
-  --grey2: "#A0A6AC";
-  --grey3: "#FFF8F7";
-  --blue: "#2B71DB";
-  --blue2: "#389AEA";
-  --blue3: "#55B0FF";
-  --blue4: "#33BCD4";
-  --green: "#42C7CA";
-  --green2: "#00C2A5";
-  --green3: "#01D78D";
-  --green4: "#ADF2DB";
-  --yellow: "#FFCE37";
-  --yellow2: "#FCF3D7";
-  --light1: "#F2F5F9";
-  --light2: "#FFFAEA";
-  --purple: "#8269DD";
-  --purple2: "#8977E6";
-  --purple3: "#9999FF";
+  --red1: #ff3333;
+  --red2: #e64551;
+  --red3: #f24f4f;
+  --red4: #f14b4b;
+  --red41: #ff6f61;
+  --red5: #ff9b91;
+  --red6: #fff8f7;
+  --black: #2c2e32;
+  --white: #ffffff;
+  --grey1: #676f79;
+  --grey2: #a0a6ac;
+  --grey3: #fff8f7;
+  --blue: #2b71db;
+  --blue2: #389aea;
+  --blue3: #55b0ff;
+  --blue4: #33bcd4;
+  --green: #42c7ca;
+  --green2: #00c2a5;
+  --green3: #01d78d;
+  --green4: #adf2db;
+  --yellow: #ffce37;
+  --yellow2: #fcf3d7;
+  --light1: #f2f5f9;
+  --light2: #fffaea;
+  --purple: #8269dd;
+  --purple2: #8977e6;
+  --purple3: #9999ff;
 }
