--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,9 @@
   font-family: '';
   src: local(''), url(./fonts/Rajdhani/Rajdhani-Regular.ttf) format('truetype');
 } */
-* {
-  margin: 0px;
-}
 
 body {
+  padding: 0;
   margin: 0;
   font-family: "Segoe UI";
   -webkit-font-smoothing: antialiased;
