--- a/frontend/src/views/Admin/statics/css/adminDashboard.css
+++ b/frontend/src/views/Admin/statics/css/adminDashboard.css
@@ -33,7 +33,7 @@
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-classresourcesboxcontainer {
+.classresourcesboxcontainer {
   width: 400px;
   height: 510px;
   margin-top: 40px;
