--- a/frontend/src/views/Quiz/statics/css/Quiz.css
+++ b/frontend/src/views/Quiz/statics/css/Quiz.css
@@ -36,12 +36,12 @@
 .notePadTop {
   width: 86%;
   position: relative;
-  left: 45px;
+  left: 25px;
 }
 .notePadBot {
   position: relative;
   top: 10px;
-  left: 20px;
+  left: 0px;
 }
 .notePadContainer {
   position: relative;
@@ -49,7 +49,10 @@
 }
 .plusIcon {
   cursor: pointer;
+
   height: 30px;
+  position: relative;
+  left: 0px;
 }
 .gridIconsContainer {
   width: 70px;
