--- a/frontend/src/views/Admin/statics/css/adminDashboard.css
+++ b/frontend/src/views/Admin/statics/css/adminDashboard.css
@@ -1,74 +1,75 @@
 @import "../../../../utils/colors.css";
 
-.root {
+.admin_root {
   width: 95%;
   height: 100vh;
-  margin: 0px auto;
+  margin: 0px auto !important;
   position: relative;
   flex-grow: 1;
 }
-.topbar {
+
+.admin_topBar {
   width: 100%;
   height: 50px;
-  margin-top: 50px;
+  margin-top: 50px !important;
 }
-.botbar {
+.admin_botBar {
   width: 100%;
   height: 810px;
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
-.leftcontainer {
+.admin_leftContainer {
   height: 810px;
 }
-.middlecontainer {
+.admin_middleContainer {
   height: 810px;
 }
-.rightcontainer {
+.admin_rightContainer {
   height: 810px;
 }
-.activeclassboxcontainer {
+.admin_activeClassBoxContainer {
   width: 400px;
   height: 250px;
   background: var(--white);
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.classresourcesboxcontainer {
+.admin_classResourcesBoxContainer {
   width: 400px;
   height: 510px;
-  margin-top: 40px;
+  margin-top: 40px !important;
   background: var(--white);
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.discussionboxcontainer {
+.admin_discussionBoxContainer {
   width: 400px;
   height: 800px;
-  margin: 0px auto;
+  margin: 0px auto !important;
   background: var(--white);
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.postboxcontainer {
+.admin_postBoxContainer {
   width: 400px;
   height: 250px;
   background: var(--white);
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.quizboxcontainer {
+.admin_quizBoxContainer {
   width: 400px;
   height: 250px;
   background: var(--white);
   border-radius: 15px;
-  margin-top: 25px;
+  margin-top: 25px !important;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.tbdboxcontainer {
+.admin_tbdBoxContainer {
   width: 400px;
   height: 250px;
   background: var(--white);
   border-radius: 15px;
-  margin-top: 25px;
+  margin-top: 25px !important;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
