--- a/frontend/src/views/Admin/statics/css/studentView.css
+++ b/frontend/src/views/Admin/statics/css/studentView.css
@@ -1,38 +1,42 @@
 @import "../../../../utils/colors.css";
-.root {
-  width: 95% !important;
-  height: 100vh;
+
+.adminStudent_root {
+  width: 100% !important;
   margin: 0px auto !important;
   position: relative !important;
   flex-grow: 1;
 }
-.topBar {
-  width: 100%;
-  margin-top: 50px !important;
+.adminStudent_topBarContainer {
+  width: 95%;
+  margin-top: 20px !important;
 }
-.botBar {
-  width: 100%;
-  height: 810px;
-  margin-top: 30px !important;
+.adminStudent_topBar {
 }
-.mainContainer {
-  width: 100%;
+.adminStudent_textContainer {
+  cursor: text;
 }
-.innerContainer {
+.adminStudent_text {
+  font-weight: bold;
+  font-size: 2.5em;
+  cursor: text;
+}
+.adminStudent_botBar {
+  width: 100%;
+  margin-top: 0px !important;
+  margin-bottom: 50px;
+}
+.adminStudent_innerContainer {
   width: 95% !important;
-  height: 780px;
   margin: 0px auto !important;
-  overflow: scroll;
-  overflow-x: hidden;
 }
-.departText {
+.adminStudent_departContainer {
+}
+.adminStudent_departText {
   font-weight: bold;
   font-size: 3em;
-  float: left;
   margin-left: 40px;
 }
-.plusIcon {
-  float: right;
+.adminStudent_plusIcon {
   margin-right: 100px !important;
   margin-top: 10px !important;
   cursor: pointer;
