--- a/frontend/src/views/TeacherDashboard/statics/css/teacherDashboard.css
+++ b/frontend/src/views/TeacherDashboard/statics/css/teacherDashboard.css
@@ -1,13 +1,13 @@
 @import "../../../../utils/colors.css";
 
-.root {
+.teacherDash_root {
   width: 95%;
   height: 100vh;
   margin: 0px auto !important;
   position: relative;
   flex-grow: 1;
 }
-.classQuestionText {
+.teacherDash_classQuestionText {
   position: relative;
   font-weight: bold;
   font-size: 2.5em;
@@ -15,27 +15,27 @@
   position: relative !important;
   left: 500px !important;
 }
-.topBar {
+.teacherDash_topBar {
   width: 100%;
   height: 50px;
   margin-top: 50px !important;
 }
-.botBar {
+.teacherDash_botBar {
   width: 100%;
   height: 810px;
   margin-top: 20px !important;
 }
-.leftContainer {
+.teacherDash_leftContainer {
   height: 810px;
 }
-.activeClassBoxContainer {
+.teacherDash_activeClassBoxContainer {
   width: 400px;
   height: 250px;
   background: var(--white);
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.classResourcesBoxContainer {
+.teacherDash_classResourcesBoxContainer {
   width: 400px;
   height: 510px;
   margin-top: 40px !important;
@@ -43,7 +43,7 @@
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.questionsContainer {
+.teacherDash_questionsContainer {
   padding: 20px;
   width: 850px;
   height: 800px;
@@ -52,22 +52,14 @@
   overflow: auto;
   overflow-x: hidden;
 }
-.activeContainer {
+.teacherDash_activeContainer {
   width: 400px;
   height: 250px;
   background: var(--white);
   border-radius: 15px;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.quizBoxContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
-  margin-top: 25px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.classResourceContainer {
+.teacherDash_quizBoxContainer {
   width: 400px;
   height: 250px;
   background: var(--white);
@@ -75,7 +67,15 @@
   margin-top: 25px !important;
   box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
 }
-.activeclassText {
+.teacherDash_classResourceContainer {
+  width: 400px;
+  height: 250px;
+  background: var(--white);
+  border-radius: 15px;
+  margin-top: 25px !important;
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+}
+.teacherDash_activeclassText {
   height: 100%;
   position: relative;
   font-weight: 500;
@@ -83,11 +83,11 @@
   cursor: text;
   margin-left: 10px !important;
 }
-.sideBoxIcons {
+.teacherDash_sideBoxIcons {
   margin-left: 20px;
   margin-top: 20px;
 }
-.classText {
+.teacherDash_classText {
   height: 100%;
   float: left;
   margin-top: 30px !important;
@@ -97,7 +97,7 @@
   font-size: 3.2em;
   cursor: text;
 }
-.classTextInner {
+.teacherDash_classTextInner {
   height: 100%;
   float: left;
   margin-top: 10px !important;
@@ -110,7 +110,7 @@
   word-wrap: normal;
   overflow: hidden;
 }
-.batchText {
+.teacherDash_batchText {
   position: relative;
   float: right;
   font-size: 1.5em;
@@ -119,7 +119,7 @@
   margin-right: 40px !important;
   margin-top: 20px !important;
 }
-.smallRedBox {
+.teacherDash_smallRedBox {
   margin-left: 20px !important;
   margin-top: 20px !important;
   display: inline-block;
@@ -128,12 +128,12 @@
   border-radius: 50%;
   background: var(--red4);
 }
-.quizText {
+.teacherDash_quizText {
   margin-left: 10px !important;
   font-weight: 500;
   font-size: 1.5em;
 }
-.rescourcesText {
+.teacherDash_rescourcesText {
   margin-left: 10px !important;
   font-weight: 500;
   font-size: 1.5em;
