--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,10 @@
   font-family: '';
   src: local(''), url(./fonts/Rajdhani/Rajdhani-Regular.ttf) format('truetype');
 } */
-
+* {
+  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: auto;
+}
 body {
   padding: 0;
   margin: 0;
