--- a/frontend/src/views/Dashboard/statics/css/Dashboard.css
+++ b/frontend/src/views/Dashboard/statics/css/Dashboard.css
@@ -1,75 +1,75 @@
 @import "../../../../utils/colors.css";
 
 .mainDash_root {
-  width: 95%;
-  height: 100vh;
+  width: 95% !important;
+  height: 100vh !important;
   margin: 0px auto !important;
-  position: relative;
-  flex-grow: 1;
+  position: relative !important;
+  flex-grow: 1 !important;
 }
 
 .mainDash_topBar {
-  width: 100%;
-  height: 50px;
+  width: 100% !important;
+  height: 50px !important;
   margin-top: 50px !important;
 }
 .mainDash_botBar {
-  width: 100%;
-  height: 810px;
+  width: 100% !important;
+  height: 810px !important;
   margin-top: 20px !important;
 }
 .mainDash_leftContainer {
-  height: 810px;
+  height: 810px !important;
 }
 .mainDash_middleContainer {
-  height: 810px;
+  height: 810px !important;
 }
 .mainDash_rightContainer {
-  height: 810px;
+  height: 810px !important;
 }
 .mainDash_activeClassBoxContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  width: 400px !important;
+  height: 250px !important;
+  background: var(--white) !important;
+  border-radius: 15px !important;
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
 }
 .mainDash_classResourcesBoxContainer {
-  width: 400px;
-  height: 510px;
+  width: 400px !important;
+  height: 510px !important;
   margin-top: 40px !important;
-  background: var(--white);
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  background: var(--white) !important;
+  border-radius: 15px !important;
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
 }
 .mainDash_discussionBoxContainer {
-  width: 400px;
-  height: 800px;
+  width: 400px !important;
+  height: 800px !important;
   margin: 0px auto !important;
-  background: var(--white);
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  background: var(--white) !important;
+  border-radius: 15px !important;
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
 }
 .mainDash_postBoxContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  width: 400px !important;
+  height: 250px !important;
+  background: var(--white) !important;
+  border-radius: 15px !important;
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
 }
 .mainDash_quizBoxContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
+  width: 400px !important;
+  height: 250px !important;
+  background: var(--white) !important;
+  border-radius: 15px !important;
   margin-top: 25px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
 }
 .mainDash_tbdBoxContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
+  width: 400px !important;
+  height: 250px !important;
+  background: var(--white) !important;
+  border-radius: 15px !important;
   margin-top: 25px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
 }
