--- a/frontend/src/components/statics/css/button.css
+++ b/frontend/src/components/statics/css/button.css
@@ -1,7 +1,8 @@
 @import "../../../utils/colors.css";
-
-.main_button {
-  outline: none;
-  border: none;
-  cursor: pointer !important;
+@media only screen and (min-width: 1920px) {
+  .main_button {
+    outline: none;
+    border: none;
+    cursor: pointer !important;
+  }
 }
