--- a/frontend/src/components/statics/css/courseBox.css
+++ b/frontend/src/components/statics/css/courseBox.css
@@ -1,6 +1,6 @@
 @import "../../../utils/colors.css";
-
-.courseBox_container {
+@media only screen and (min-width: 1920px) {
+  .courseBox_container {
     width: 85% !important;
     border-radius: 25px;
     height: 63vh;
@@ -10,25 +10,25 @@
     margin: 0px auto;
     background: var(--white);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.courseBox_courseTextTitle {
+  }
+  .courseBox_courseTextTitle {
     font-size: 2em;
     height: 2em;
     font-weight: bold;
     position: relative;
     top: 15px;
     left: 30px;
-}
-.courseBox_courseDetailBoxContainer {
+  }
+  .courseBox_courseDetailBoxContainer {
     width: 100%;
     height: 10%;
     position: relative;
-}
-.courseBox_courseDetailBox {
+  }
+  .courseBox_courseDetailBox {
     height: 3.4vw;
     padding: 2px;
-}
-.courseBox_courseTextCode {
+  }
+  .courseBox_courseTextCode {
     width: 85%;
     font-size: 1.4em;
     font-weight: bold;
@@ -37,8 +37,8 @@
     left: 30px;
     line-height: 0.95em;
     list-style-type: none;
-}
-.courseBox_courseTextCodeSelected {
+  }
+  .courseBox_courseTextCodeSelected {
     width: 85%;
     font-size: 1.4em;
     font-weight: bold;
@@ -48,15 +48,15 @@
     line-height: 0.95em;
     list-style-type: none;
     color: var(--red4);
-}
-.courseBox_courseTextName {
+  }
+  .courseBox_courseTextName {
     font-size: 0.6em;
     font-weight: 600;
     position: relative;
     list-style-type: none;
     color: var(--grey1);
-}
-.courseBox_courseTextCredit {
+  }
+  .courseBox_courseTextCredit {
     font-size: 0.8em;
     font-weight: 400;
     position: absolute;
@@ -64,4 +64,5 @@
     right: 10px;
     list-style-type: none;
     color: var(--grey1);
+  }
 }
