--- a/frontend/src/components/statics/css/notificationBox.css
+++ b/frontend/src/components/statics/css/notificationBox.css
@@ -1,6 +1,6 @@
 @import "../../../utils/colors.css";
-
-.notifBox_root {
+@media only screen and (min-width: 1920px) {
+  .notifBox_root {
     width: 20vw;
     height: 55vh;
     flex-grow: 1;
@@ -9,12 +9,13 @@
     z-index: 1;
     background: var(--red6);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.notifBox_titleBox {
+  }
+  .notifBox_titleBox {
     background: var(--red5);
     position: relative;
-}
-.notifBox_titleText {
+  }
+  .notifBox_titleText {
     font-weight: bold;
     font-size: 1.8em;
+  }
 }
