--- a/frontend/src/components/statics/css/profileBox.css
+++ b/frontend/src/components/statics/css/profileBox.css
@@ -1,9 +1,9 @@
 @import "../../../utils/colors.css";
-
-.profileBox_root {
+@media only screen and (min-width: 1920px) {
+  .profileBox_root {
     flex-grow: 1;
-}
-.profileBox_container {
+  }
+  .profileBox_container {
     margin: 0px auto;
     width: 85% !important;
     height: 200px;
@@ -11,57 +11,58 @@
     border-radius: 25px;
     background: var(--white);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.profileBox_image {
+  }
+  .profileBox_image {
     border-radius: 50%;
-}
-.profileBox_imageSide {
+  }
+  .profileBox_imageSide {
     height: 100%;
     position: relative;
-}
-.profileBox_textSide {
+  }
+  .profileBox_textSide {
     position: relative;
-}
-.profileBox_profileImage {
+  }
+  .profileBox_profileImage {
     width: 80%;
     position: relative;
     top: 30px;
     left: 15px;
-}
-.profileBox_profileText {
+  }
+  .profileBox_profileText {
     font-size: 1.3em;
     font-weight: bold;
-}
-.profileBox_textBox1 {
+  }
+  .profileBox_textBox1 {
     width: 85%;
     position: relative;
     top: 10px;
-}
-.profileBox_textBox3 {
+  }
+  .profileBox_textBox3 {
     width: 85%;
     position: absolute;
     bottom: 10px;
-}
-.profileBox_departmentText {
+  }
+  .profileBox_departmentText {
     font-weight: 400;
     font-size: 1.2em;
     color: var(--red4);
-}
-.profileBox_buttonContainer {
+  }
+  .profileBox_buttonContainer {
     width: 40px;
     height: 40px;
     position: absolute;
     top: 10px;
     right: 15px;
-}
-.profileBox_profileButton {
+  }
+  .profileBox_profileButton {
     width: 40px;
     height: 40px;
     background-color: var(--yellow2);
     border-radius: 50%;
-}
-.profileBox_profileButtonIcon {
+  }
+  .profileBox_profileButtonIcon {
     width: 40px;
     height: 40px;
     position: absolute;
+  }
 }
