--- a/frontend/src/components/statics/css/questions.css
+++ b/frontend/src/components/statics/css/questions.css
@@ -1,6 +1,6 @@
 @import "../../../utils/colors.css";
-
-.questions_root {
+@media only screen and (min-width: 1920px) {
+  .questions_root {
     flex-grow: 1;
     width: 90% !important;
     height: 15vh;
@@ -10,16 +10,16 @@
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     color: var(--black);
-}
+  }
 
-.questions_innerContainer {
+  .questions_innerContainer {
     overflow: hidden;
     height: 80%;
     position: relative;
     top: 8%;
-}
+  }
 
-.questions_questionContainer {
+  .questions_questionContainer {
     font-weight: bold;
     font-size: 1.2em;
     position: relative;
@@ -27,9 +27,9 @@
     left: 5%;
     width: 75%;
     max-height: 30%;
-}
+  }
 
-.questions_studentContainer {
+  .questions_studentContainer {
     width: 90%;
     position: absolute;
     bottom: 8px;
@@ -38,4 +38,5 @@
     word-wrap: normal;
     color: var(--grey2);
     line-height: 1.7em;
+  }
 }
