--- a/frontend/src/components/statics/css/sideBar.css
+++ b/frontend/src/components/statics/css/sideBar.css
@@ -1,28 +1,29 @@
 @import "../../../utils/colors.css";
-
-.sideBar_root {
-  flex-grow: 1 !important;
-}
-.sideBar_sideBar {
-}
-.sideBar_logoContainer {
-  width: 85% !important;
-  margin: 20px auto !important;
-}
-.sideBar_horizontalLine {
-  width: 60px !important;
-  height: 1.5px !important;
-  background-color: var(--grey2) !important;
-  opacity: 0.3 !important;
-  margin: -10px auto !important;
-}
-.sideBar_iconContainer {
-  width: 85% !important;
-  margin: 40px auto !important;
-}
-.sideBar_sidebarLink {
-  text-decoration: none !important;
-}
-.sideBar_iconStyle {
-  cursor: pointer !important;
+@media only screen and (min-width: 1920px) {
+  .sideBar_root {
+    flex-grow: 1 !important;
+  }
+  .sideBar_sideBar {
+  }
+  .sideBar_logoContainer {
+    width: 85% !important;
+    margin: 20px auto !important;
+  }
+  .sideBar_horizontalLine {
+    width: 60px !important;
+    height: 1.5px !important;
+    background-color: var(--grey2) !important;
+    opacity: 0.3 !important;
+    margin: -10px auto !important;
+  }
+  .sideBar_iconContainer {
+    width: 85% !important;
+    margin: 40px auto !important;
+  }
+  .sideBar_sidebarLink {
+    text-decoration: none !important;
+  }
+  .sideBar_iconStyle {
+    cursor: pointer !important;
+  }
 }
