--- a/frontend/src/views/Admin/statics/css/adminForm.css
+++ b/frontend/src/views/Admin/statics/css/adminForm.css
@@ -1,76 +1,77 @@
 @import "../../../../utils/colors.css";
-
-.root {
-  width: 95%;
-  height: 100vh;
-  margin: 0px auto !important;
-  position: relative;
-  flex-grow: 1;
-}
-.inputButton {
-  outline: none;
-  width: 500px;
-  height: 50px;
-  margin-top: 30px !important;
-  border-top: 0px;
-  border-left: 0px;
-  border-right: 0px;
-  border-bottom: 2px solid var(--grey2);
-  font-size: 1.3em;
-}
-.titleContainer {
-  width: 1200px;
-  margin: 0px auto !important;
-  position: relative;
-  top: 50px;
-}
-.activeTitle {
-  display: inline-block;
-  margin-bottom: 20px !important;
-  margin-left: 10px !important;
-}
-.formBoxContainer {
-  height: 750px;
-  position: relative;
-  top: 30px;
-}
-.formBox {
-  width: 92%;
-  margin: 20px auto !important;
-}
-.profileBoxContainer {
-  width: 1200px;
-  height: 750;
-  margin: 0px auto !important;
-  position: relative;
-  top: 80px;
-}
-.profileBox {
-  border-radius: 25px;
-  background: var(--white);
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.buttonContainer {
-  position: relative;
-  margin: 0px auto !important;
-}
-.optionBox {
-  padding: 10px;
-  background: var(--white);
-  outline: none;
-  border: none;
-  font-size: 1.2em;
-  color: var(--grey1);
-  height: 60px;
-  margin-top: 25px !important;
-  border-bottom: 2px solid var(--grey2);
-}
-.optionList {
-  margin-top: 4px !important;
-  background: #fff;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
-  transform: scaleY(1);
-  transform-origin: left top 0px;
-  max-height: 200px;
-  overflow-y: auto;
+@media only screen and (min-width: 1920px) {
+  .root {
+    width: 95%;
+    height: 100vh;
+    margin: 0px auto !important;
+    position: relative;
+    flex-grow: 1;
+  }
+  .inputButton {
+    outline: none;
+    width: 500px;
+    height: 50px;
+    margin-top: 30px !important;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 2px solid var(--grey2);
+    font-size: 1.3em;
+  }
+  .titleContainer {
+    width: 1200px;
+    margin: 0px auto !important;
+    position: relative;
+    top: 50px;
+  }
+  .activeTitle {
+    display: inline-block;
+    margin-bottom: 20px !important;
+    margin-left: 10px !important;
+  }
+  .formBoxContainer {
+    height: 750px;
+    position: relative;
+    top: 30px;
+  }
+  .formBox {
+    width: 92%;
+    margin: 20px auto !important;
+  }
+  .profileBoxContainer {
+    width: 1200px;
+    height: 750;
+    margin: 0px auto !important;
+    position: relative;
+    top: 80px;
+  }
+  .profileBox {
+    border-radius: 25px;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .buttonContainer {
+    position: relative;
+    margin: 0px auto !important;
+  }
+  .optionBox {
+    padding: 10px;
+    background: var(--white);
+    outline: none;
+    border: none;
+    font-size: 1.2em;
+    color: var(--grey1);
+    height: 60px;
+    margin-top: 25px !important;
+    border-bottom: 2px solid var(--grey2);
+  }
+  .optionList {
+    margin-top: 4px !important;
+    background: #fff;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+    transform: scaleY(1);
+    transform-origin: left top 0px;
+    max-height: 200px;
+    overflow-y: auto;
+  }
 }
