--- a/frontend/src/views/Dashboard/statics/css/dashboard.css
+++ b/frontend/src/views/Dashboard/statics/css/dashboard.css
@@ -1,75 +1,76 @@
 @import "../../../../utils/colors.css";
+@media only screen and (min-width: 1920px) {
+  .mainDash_root {
+    width: 95% !important;
+    height: 100vh !important;
+    margin: 0px auto !important;
+    position: relative !important;
+    flex-grow: 1 !important;
+  }
 
-.mainDash_root {
-  width: 95% !important;
-  height: 100vh !important;
-  margin: 0px auto !important;
-  position: relative !important;
-  flex-grow: 1 !important;
-}
-
-.mainDash_topBar {
-  width: 100% !important;
-  height: 50px !important;
-  margin-top: 50px !important;
-}
-.mainDash_botBar {
-  width: 100% !important;
-  height: 810px !important;
-  margin-top: 20px !important;
-}
-.mainDash_leftContainer {
-  height: 810px !important;
-}
-.mainDash_middleContainer {
-  height: 810px !important;
-}
-.mainDash_rightContainer {
-  height: 810px !important;
-}
-.mainDash_activeClassBoxContainer {
-  width: 400px !important;
-  height: 250px !important;
-  background: var(--white) !important;
-  border-radius: 15px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-}
-.mainDash_classResourcesBoxContainer {
-  width: 400px !important;
-  height: 510px !important;
-  margin-top: 40px !important;
-  background: var(--white) !important;
-  border-radius: 15px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-}
-.mainDash_discussionBoxContainer {
-  width: 400px !important;
-  height: 800px !important;
-  margin: 0px auto !important;
-  background: var(--white) !important;
-  border-radius: 15px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-}
-.mainDash_postBoxContainer {
-  width: 400px !important;
-  height: 250px !important;
-  background: var(--white) !important;
-  border-radius: 15px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-}
-.mainDash_quizBoxContainer {
-  width: 400px !important;
-  height: 250px !important;
-  background: var(--white) !important;
-  border-radius: 15px !important;
-  margin-top: 25px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
-}
-.mainDash_tbdBoxContainer {
-  width: 400px !important;
-  height: 250px !important;
-  background: var(--white) !important;
-  border-radius: 15px !important;
-  margin-top: 25px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  .mainDash_topBar {
+    width: 100% !important;
+    height: 50px !important;
+    margin-top: 50px !important;
+  }
+  .mainDash_botBar {
+    width: 100% !important;
+    height: 810px !important;
+    margin-top: 20px !important;
+  }
+  .mainDash_leftContainer {
+    height: 810px !important;
+  }
+  .mainDash_middleContainer {
+    height: 810px !important;
+  }
+  .mainDash_rightContainer {
+    height: 810px !important;
+  }
+  .mainDash_activeClassBoxContainer {
+    width: 400px !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .mainDash_classResourcesBoxContainer {
+    width: 400px !important;
+    height: 510px !important;
+    margin-top: 40px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .mainDash_discussionBoxContainer {
+    width: 400px !important;
+    height: 800px !important;
+    margin: 0px auto !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .mainDash_postBoxContainer {
+    width: 400px !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .mainDash_quizBoxContainer {
+    width: 400px !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    margin-top: 25px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .mainDash_tbdBoxContainer {
+    width: 400px !important;
+    height: 250px !important;
+    background: var(--white) !important;
+    border-radius: 15px !important;
+    margin-top: 25px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
 }
