--- a/frontend/src/views/TeacherDashboard/statics/css/teacherDashboard.css
+++ b/frontend/src/views/TeacherDashboard/statics/css/teacherDashboard.css
@@ -1,140 +1,141 @@
 @import "../../../../utils/colors.css";
-
-.teacherDash_root {
-  width: 95%;
-  height: 100vh;
-  margin: 0px auto !important;
-  position: relative;
-  flex-grow: 1;
-}
-.teacherDash_classQuestionText {
-  position: relative;
-  font-weight: bold;
-  font-size: 2.5em;
-  cursor: text;
-  position: relative !important;
-  left: 500px !important;
-}
-.teacherDash_topBar {
-  width: 100%;
-  height: 50px;
-  margin-top: 50px !important;
-}
-.teacherDash_botBar {
-  width: 100%;
-  height: 810px;
-  margin-top: 20px !important;
-}
-.teacherDash_leftContainer {
-  height: 810px;
-}
-.teacherDash_activeClassBoxContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.teacherDash_classResourcesBoxContainer {
-  width: 400px;
-  height: 510px;
-  margin-top: 40px !important;
-  background: var(--white);
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.teacherDash_questionsContainer {
-  padding: 20px;
-  width: 850px;
-  height: 800px;
-  margin: 0px auto;
-  border-radius: 15px;
-  overflow: auto;
-  overflow-x: hidden;
-}
-.teacherDash_activeContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.teacherDash_quizBoxContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
-  margin-top: 25px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.teacherDash_classResourceContainer {
-  width: 400px;
-  height: 250px;
-  background: var(--white);
-  border-radius: 15px;
-  margin-top: 25px !important;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-.teacherDash_activeclassText {
-  height: 100%;
-  position: relative;
-  font-weight: 500;
-  font-size: 1.5em;
-  cursor: text;
-  margin-left: 10px !important;
-}
-.teacherDash_sideBoxIcons {
-  margin-left: 20px;
-  margin-top: 20px;
-}
-.teacherDash_classText {
-  height: 100%;
-  float: left;
-  margin-top: 30px !important;
-  margin-left: 30px !important;
-  position: relative;
-  font-weight: bold;
-  font-size: 3.2em;
-  cursor: text;
-}
-.teacherDash_classTextInner {
-  height: 100%;
-  float: left;
-  margin-top: 10px !important;
-  margin-left: 30px !important;
-  position: relative;
-  font-weight: 500;
-  color: var(--grey2);
-  font-size: 0.9em;
-  cursor: text;
-  word-wrap: normal;
-  overflow: hidden;
-}
-.teacherDash_batchText {
-  position: relative;
-  float: right;
-  font-size: 1.5em;
-  font-weight: 10;
-  color: var(--green3);
-  margin-right: 40px !important;
-  margin-top: 20px !important;
-}
-.teacherDash_smallRedBox {
-  margin-left: 20px !important;
-  margin-top: 20px !important;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: var(--red4);
-}
-.teacherDash_quizText {
-  margin-left: 10px !important;
-  font-weight: 500;
-  font-size: 1.5em;
-}
-.teacherDash_rescourcesText {
-  margin-left: 10px !important;
-  font-weight: 500;
-  font-size: 1.5em;
+@media only screen and (min-width: 1920px) {
+  .teacherDash_root {
+    width: 95%;
+    height: 100vh;
+    margin: 0px auto !important;
+    position: relative;
+    flex-grow: 1;
+  }
+  .teacherDash_classQuestionText {
+    position: relative;
+    font-weight: bold;
+    font-size: 2.5em;
+    cursor: text;
+    position: relative !important;
+    left: 500px !important;
+  }
+  .teacherDash_topBar {
+    width: 100%;
+    height: 50px;
+    margin-top: 50px !important;
+  }
+  .teacherDash_botBar {
+    width: 100%;
+    height: 810px;
+    margin-top: 20px !important;
+  }
+  .teacherDash_leftContainer {
+    height: 810px;
+  }
+  .teacherDash_activeClassBoxContainer {
+    width: 400px;
+    height: 250px;
+    background: var(--white);
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .teacherDash_classResourcesBoxContainer {
+    width: 400px;
+    height: 510px;
+    margin-top: 40px !important;
+    background: var(--white);
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .teacherDash_questionsContainer {
+    padding: 20px;
+    width: 850px;
+    height: 800px;
+    margin: 0px auto;
+    border-radius: 15px;
+    overflow: auto;
+    overflow-x: hidden;
+  }
+  .teacherDash_activeContainer {
+    width: 400px;
+    height: 250px;
+    background: var(--white);
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .teacherDash_quizBoxContainer {
+    width: 400px;
+    height: 250px;
+    background: var(--white);
+    border-radius: 15px;
+    margin-top: 25px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .teacherDash_classResourceContainer {
+    width: 400px;
+    height: 250px;
+    background: var(--white);
+    border-radius: 15px;
+    margin-top: 25px !important;
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+  }
+  .teacherDash_activeclassText {
+    height: 100%;
+    position: relative;
+    font-weight: 500;
+    font-size: 1.5em;
+    cursor: text;
+    margin-left: 10px !important;
+  }
+  .teacherDash_sideBoxIcons {
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+  .teacherDash_classText {
+    height: 100%;
+    float: left;
+    margin-top: 30px !important;
+    margin-left: 30px !important;
+    position: relative;
+    font-weight: bold;
+    font-size: 3.2em;
+    cursor: text;
+  }
+  .teacherDash_classTextInner {
+    height: 100%;
+    float: left;
+    margin-top: 10px !important;
+    margin-left: 30px !important;
+    position: relative;
+    font-weight: 500;
+    color: var(--grey2);
+    font-size: 0.9em;
+    cursor: text;
+    word-wrap: normal;
+    overflow: hidden;
+  }
+  .teacherDash_batchText {
+    position: relative;
+    float: right;
+    font-size: 1.5em;
+    font-weight: 10;
+    color: var(--green3);
+    margin-right: 40px !important;
+    margin-top: 20px !important;
+  }
+  .teacherDash_smallRedBox {
+    margin-left: 20px !important;
+    margin-top: 20px !important;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--red4);
+  }
+  .teacherDash_quizText {
+    margin-left: 10px !important;
+    font-weight: 500;
+    font-size: 1.5em;
+  }
+  .teacherDash_rescourcesText {
+    margin-left: 10px !important;
+    font-weight: 500;
+    font-size: 1.5em;
+  }
 }
