Final Refactor Before Media Query Optimization:

--- a/frontend/src/views/Login/statics/css/loginCommon.css
+++ b/frontend/src/views/Login/statics/css/loginCommon.css
@@ -1,36 +1,41 @@
 @import "../../../../utils/colors.css";
-
-.loginCommon_loginButton {
-  width: 300px;
-  height: 50px;
-  background-color: var(--red4);
-  color: var(--white);
-  border-radius: 15px;
-  font-size: 1.2em;
-}
-.loginCommon_guestButton {
-  width: 300px;
-  height: 50px;
-  background-color: var(--black);
-  color: var(--white);
-  border-radius: 15px;
-  font-size: 1.2em;
-}
-.loginCommon_inputButton {
-  outline: none;
-  border: none;
-  width: 300px;
-  height: 50px;
-  border-bottom: 1px solid var(--grey2);
-  font-size: 1.3em;
-  background: transparent;
-}
-.loginCommon_line {
-  width: 130px;
-  height: 1px;
-  background-color: var(--grey1);
-  margin: 0px auto;
-}
-.loginCommon_inputLabel {
-  font-size: 1.2em;
+@media only screen and (min-width: 1920px) {
+  .loginCommon_loginButton {
+    width: 300px;
+    height: 50px;
+    background-color: var(--red4);
+    color: var(--white);
+    border-radius: 15px;
+    font-size: 1.2em;
+  }
+  .loginCommon_label {
+    font-weight: normal;
+    font-size: 2.2em;
+  }
+  .loginCommon_guestButton {
+    width: 300px;
+    height: 50px;
+    background-color: var(--black);
+    color: var(--white);
+    border-radius: 15px;
+    font-size: 1.2em;
+  }
+  .loginCommon_inputButton {
+    outline: none;
+    border: none;
+    width: 300px;
+    height: 50px;
+    border-bottom: 1px solid var(--grey2);
+    font-size: 1.3em;
+    background: transparent;
+  }
+  .loginCommon_line {
+    width: 130px;
+    height: 1px;
+    background-color: var(--grey1);
+    margin: 0px auto;
+  }
+  .loginCommon_inputLabel {
+    font-size: 1.2em;
+  }
 }
