--- a/frontend/src/components/statics/css/fancyButton.css
+++ b/frontend/src/components/statics/css/fancyButton.css
@@ -12,5 +12,16 @@
   }
 }
 
-@media only screen and (min-width: 1366px) {
+@media only screen and (max-width: 1919px) {
+  .buttonIcon {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    cursor: pointer;
+  }
+  .button {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+  }
 }
