--- a/frontend/src/components/statics/css/navIcons.css
+++ b/frontend/src/components/statics/css/navIcons.css
@@ -1,15 +1,14 @@
 @import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
   .navIcons_icons {
+    width: 20%;
     position: relative;
-    left: -8px;
   }
   .navIcons_iconStyle {
     cursor: pointer;
   }
   .navIcons_container {
-    width: 85% !important;
-    margin: 0px auto !important;
+    margin: 10px auto !important;
     position: relative !important;
   }
   .navIcons_verticalLine {
@@ -17,15 +16,48 @@
     height: 10px;
     background-color: var(--red3);
   }
+  .navIcons_navTextContainer {
+    width: 75%;
+    margin: 0px auto !important;
+  }
   .navIcons_navText {
+    margin: 0px auto !important;
+    padding: 0px;
     text-decoration: none;
-    font-size: 1em;
-    line-height: 1.8em;
+    font-size: 84%;
     position: relative;
-    left: 5px;
     color: var(--black);
   }
 }
 
-@media only screen and (min-width: 1366px) {
+@media only screen and (max-width: 1919px) {
+  .navIcons_icons {
+    width: 20%;
+    position: relative;
+  }
+  .navIcons_iconStyle {
+    cursor: pointer;
+    margin: 22% auto !important;
+  }
+  .navIcons_container {
+    margin: 10px auto !important;
+    position: relative !important;
+  }
+  .navIcons_verticalLine {
+    width: 5px;
+    height: 10px;
+    background-color: var(--red3);
+  }
+  .navIcons_navTextContainer {
+    padding: 4%;
+    width: 75%;
+    margin: 0px auto !important;
+  }
+  .navIcons_navText {
+    margin: 0px auto !important;
+    text-decoration: none;
+    font-size: 90%;
+    position: relative;
+    color: var(--black);
+  }
 }
