--- a/frontend/src/components/statics/css/sideBar.css
+++ b/frontend/src/components/statics/css/sideBar.css
@@ -5,6 +5,10 @@
   }
   .sideBar_sideBar {
   }
+  .sideBar_iconStyle {
+    width: 100%;
+    height: 100%;
+  }
   .sideBar_logoContainer {
     width: 85% !important;
     margin: 20px auto !important;
@@ -17,10 +21,11 @@
     margin: -10px auto !important;
   }
   .sideBar_iconContainer {
-    width: 85% !important;
+    width: 90% !important;
     margin: 40px auto !important;
   }
   .sideBar_sidebarLink {
+    width: 98% !important;
     text-decoration: none !important;
   }
   .sideBar_iconStyle {
@@ -28,5 +33,36 @@
   }
 }
 
-@media only screen and (min-width: 1366px) {
+@media only screen and (max-width: 1919px) {
+  .sideBar_root {
+    flex-grow: 1 !important;
+  }
+  .sideBar_sideBar {
+  }
+  .sideBar_iconStyle {
+    width: 100%;
+    height: 100%;
+  }
+  .sideBar_logoContainer {
+    width: 85% !important;
+    margin: 20px auto !important;
+  }
+  .sideBar_horizontalLine {
+    width: 60px !important;
+    height: 1.5px !important;
+    background-color: var(--grey2) !important;
+    opacity: 0.3 !important;
+    margin: -10px auto !important;
+  }
+  .sideBar_iconContainer {
+    width: 90% !important;
+    margin: 40px auto !important;
+  }
+  .sideBar_sidebarLink {
+    width: 100% !important;
+    text-decoration: none !important;
+  }
+  .sideBar_iconStyle {
+    cursor: pointer !important;
+  }
 }
