Link on button added

--- a/backend/templates/email-templates/test_email.html
+++ b/backend/templates/email-templates/test_email.html
@@ -110,7 +110,7 @@
         </div>
         <div id="accentLine1"></div>
         <div>
-            <a href="{{link}}"><button id="actionButton">Reset Password</button></a>
+            <button id="actionButton" onlick="location.href='{{link}}'">Reset Password</button>
             <p id="bottomText">or click this link: <a href="{{link}}">{{link}}</a></p>
         </div>
         <div id="footer">&copy 2021 Sikshyalaya <br /> University Road, 28Kilo, Dhulikhel, Kavre
