--- a/frontend/src/components/statics/css/navIcons.css
+++ b/frontend/src/components/statics/css/navIcons.css
@@ -1,62 +1,59 @@
 @import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
+  .navIcons_container {
+    height: 50px;
+    position: relative !important;
+  }
+  .navIcons_selectedContainer {
+    height: 50px;
+    background-color: var(--grey3);
+    position: relative !important;
+  }
   .navIcons_icons {
-    width: 20%;
-    position: relative;
+    width: 22%;
+    line-height: 20%;
+    margin: 8px auto !important;
   }
   .navIcons_iconStyle {
     cursor: pointer;
   }
-  .navIcons_container {
-    margin: 10px auto !important;
-    position: relative !important;
-  }
-  .navIcons_verticalLine {
-    width: 5px;
-    height: 10px;
-    background-color: var(--red3);
-  }
   .navIcons_navTextContainer {
-    width: 75%;
-    margin: 0px auto !important;
+    width: 60%;
+    margin: 8px auto !important;
   }
   .navIcons_navText {
     margin: 0px auto !important;
     padding: 0px;
+    line-height: 200%;
     text-decoration: none;
-    font-size: 84%;
+    font-size: 1.05em;
     position: relative;
     color: var(--black);
   }
 }
 
 @media only screen and (max-width: 1919px) {
+  .navIcons_container {
+    position: relative !important;
+    line-height: 245%;
+  }
   .navIcons_icons {
-    width: 20%;
-    position: relative;
+    width: 22%;
+    margin: 5.5% auto !important;
   }
   .navIcons_iconStyle {
     cursor: pointer;
-    margin: 22% auto !important;
-  }
-  .navIcons_container {
-    margin: 10px auto !important;
-    position: relative !important;
-  }
-  .navIcons_verticalLine {
-    width: 5px;
-    height: 10px;
-    background-color: var(--red3);
   }
   .navIcons_navTextContainer {
-    padding: 4%;
-    width: 75%;
+    width: 65%;
     margin: 0px auto !important;
   }
   .navIcons_navText {
     margin: 0px auto !important;
+    padding: 0px;
     text-decoration: none;
-    font-size: 90%;
+    line-height: 265%;
+    font-size: 1vw;
     position: relative;
     color: var(--black);
   }
