--- a/frontend/src/components/statics/css/profileBox.css
+++ b/frontend/src/components/statics/css/profileBox.css
@@ -39,7 +39,6 @@
   }
   .profileBox_textBox3 {
     width: 85%;
-    position: absolute;
     bottom: 10px;
   }
   .profileBox_departmentText {
@@ -59,11 +58,6 @@
     height: 40px;
     background-color: var(--yellow2);
     border-radius: 50%;
-  }
-  .profileBox_profileButtonIcon {
-    width: 40px;
-    height: 40px;
-    position: absolute;
   }
 }
 
@@ -73,60 +67,56 @@
   }
   .profileBox_container {
     margin: 0px auto;
-    width: 85% !important;
-    height: 200px;
+    width: 80% !important;
+    height: 180px;
     max-height: 200px;
     border-radius: 25px;
     background: var(--white);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.3);
   }
   .profileBox_image {
     border-radius: 50%;
   }
   .profileBox_imageSide {
-    height: 100%;
     position: relative;
   }
   .profileBox_textSide {
+    width: 95% !important;
+    margin: 0px auto !important;
     position: relative;
   }
   .profileBox_profileImage {
     width: 80%;
     position: relative;
-    top: 30px;
-    left: 15px;
-  }
-  .profileBox_profileText {
-    font-size: 1.3em;
-    font-weight: bold;
+    left: 10%;
   }
   .profileBox_textBox1 {
-    width: 85%;
     position: relative;
-    top: 10px;
+    left: 2%;
+  }
+  .profileBox_profileText {
+    font-size: 0.95em;
+    font-weight: 700;
+    position: relative;
+    left: 2%;
   }
   .profileBox_textBox3 {
-    width: 85%;
-    position: absolute;
-    bottom: 10px;
+    width: 95%;
+    position: relative;
+    left: 2%;
   }
   .profileBox_departmentText {
-    font-weight: 400;
-    font-size: 1.2em;
+    font-weight: 380;
+    font-size: 0.95em;
     color: var(--red4);
+    position: relative;
+    left: 2%;
   }
   .profileBox_buttonContainer {
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 10px;
-    right: 15px;
-  }
-  .profileBox_profileButton {
-    width: 40px;
-    height: 40px;
-    background-color: var(--yellow2);
-    border-radius: 50%;
+    right: 18px;
   }
   .profileBox_profileButtonIcon {
     width: 40px;
