--- a/frontend/src/components/statics/css/smallCards.css
+++ b/frontend/src/components/statics/css/smallCards.css
@@ -90,8 +90,8 @@
 
 @media only screen and (max-width: 1919px) {
   .smallCards_container {
-    width: 360px;
-    height: 220px;
+    width: calc(255px + 2vw);
+    height: calc(160px + 2vw);
     border-radius: 20px;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
@@ -100,34 +100,32 @@
   }
 
   .smallCards_row1 {
-    height: 220px;
-  }
-  .smallCards_image {
-    border-radius: 50%;
+    height: calc(160px + 2vw);
   }
 
   .smallCards_row_col_box {
-    height: 220px;
+    height: calc(160px + 2vw);
     position: relative;
   }
 
   .smallCards_row2 {
     position: relative;
-    height: 220px;
+    height: calc(160px + 2vw);
   }
 
   .smallCards_buttonContainer {
     position: relative;
-    top: 20px;
+    top: 10px;
   }
 
   .smallCards_row_col_1 {
-    position: relative;
-    top: -20px;
+    position: absolute;
+    top: 8%;
   }
 
   .smallCards_row_col_2 {
-    position: relative;
+    position: absolute;
+    bottom: 8%;
   }
 
   .smallCards_row_col_1_bold {
