--- a/frontend/src/views/Admin/statics/css/commonView.css
+++ b/frontend/src/views/Admin/statics/css/commonView.css
@@ -6,12 +6,15 @@
     height: 100vh;
     margin: 0px auto !important;
     flex-grow: 1;
+    
   }
   .adminCommon_topBarContainer {
     width: 95%;
     margin-top: 20px !important;
+   
   }
   .adminCommon_topBar {
+   
   }
   .adminCommon_textContainer {
     cursor: text;
@@ -24,6 +27,7 @@
   .adminCommon_botBar {
     width: 95%;
     margin-top: 0px !important;
+    
   }
   .adminCommon_plusIcon {
     cursor: pointer;
@@ -32,4 +36,36 @@
 }
 
 @media only screen and (max-width: 1919px) {
+  .adminCommon_root {
+    width: 100%;
+    height: 100vh;
+    margin: 0px auto !important;
+    flex-grow: 1;
+    
+  }
+  .adminCommon_topBarContainer {
+    width: 95%;
+    margin-top: 20px !important;
+    
+  }
+  .adminCommon_topBar {
+   
+  }
+  .adminCommon_textContainer {
+    cursor: text;
+  }
+  .adminCommon_text {
+    font-weight: bold;
+    font-size: 2.5rem;
+    cursor: text;
+  }
+  .adminCommon_botBar {
+    width: 95%;
+    margin-top: 0px !important;
+   
+  }
+  .adminCommon_plusIcon {
+    cursor: pointer;
+    height: 30px;
+  }
 }
