Fixed minor error

--- a/frontend/src/views/Notes/statics/css/notes.css
+++ b/frontend/src/views/Notes/statics/css/notes.css
@@ -59,6 +59,7 @@
     .note_plusIcon {
         cursor: pointer;
         position: relative;
+        height: 30px !important;
         top: 8%;
         right: 5%;
     }
